Update few bugs found by team members
- Tweak the CSS to not overlap during dropdown.
- Remove fork.
- Change input type file to text.

--- a/frontend/src/components/Potluck/Potluck.css
+++ b/frontend/src/components/Potluck/Potluck.css
@@ -45,7 +45,7 @@
 }
 
 .potluckInvitees { 
-  z-index: 10;
+  z-index: 11;
   width: 500px; 
   margin-left: 120px;
 }
